# steam-lens

./: .gitignore  .prettierignore  ARCHITECTURE.md  DESIGN.md  ONTOLOGY_DRAFT.md  ONTOLOGY_PRUNING.md  README.md  REPORT_NOTES.md  VISION.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  m0-reachability-probe.yml
eval/agreement/: manifest.json  sample.jsonl
eval/gold/: INSTRUCTIONS.md  gold.jsonl  gold_manifest.json
mocks/: phasmophobia_aspect_report_mock.html
probes/: FINDINGS.md  agreement_deep_read.py  aspect_vocab_analysis.py  aspect_vocab_ext_probe.py  aspect_vocab_lite_probe.py  aspect_vocab_probe.py  bakeoff_runner.py  bakeoff_table.py  census_health.py  census_vs_gold_gap.py  classify_pilot.py  corpus_offtopic_probe.py  default_walk_blanking_probe.py  floor_clearance_projection.py  histogram_probe.py  judge_vs_production_gap.py  mint_census_sample.py  mint_misattribution_sample.py  offtopic_probe.py  pruning_evidence_table.py  survey_supply_counts.py
probes/captures/: corpus_hist_1091500.json  (+16 more)
scripts/: build_assist_batches.py  compile_gold.py  draw_gold_dry_run.py  draw_gold_set.py  regen_docs.py  render_gold_codebook.py  render_gold_workbook.py  verify_assist_output.py
tests/: test_aggregate.py  test_aggregate_corpus.py  test_agreement.py  test_certify.py  test_classify.py  test_evals.py  test_gemini.py  test_import_graph.py  test_judge_gold.py  test_judge_sample.py  test_label_corpus.py  test_llm_client.py  test_local_corpus.py  test_normalize.py  test_ontology_loader.py  test_openai_compat.py  test_store.py
(+272 files in other folders)
